--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Gyaim</title>
+    <title>Gyaim for Android</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Gyaim</h1>
-      <h2 class="project-tagline">MacOS用の日本語入力システム by Toshiyuki Masui</h2>
+      <h1 class="project-name">Gyaim for Android</h1>
+      <h2 class="project-tagline">Androidの日本語入力システム by Toshiyuki Masui</h2>
       <a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg" class="btn">Gyaim.dmg ダウンロード</a>
       <a href="https://github.com/masui/GyaimMotion" class="btn">ソース @ GitHub</a>
     </section>
