index.html修正、Gyaim.apk追加

--- a/index.html
+++ b/index.html
@@ -25,13 +25,32 @@
       <h3><a class="anchor" aria-hidden="true"></a>特徴</h3>
       <p>
 	<ul>
-	  <li>Gyaimは...です...</li>
+	  <li>Android用の日本語IMEです</li>
+	  <li>今のところBlackBerry KEYOne専用ですがどこでも使えるようにしたいと思っています</li>
+	  <li><a href="http://masui.github.io/GyaimMotion/">MacのGyaim</a>とだいたい同じ感じで使えます</li>
+	  <li>右シフトキーで日本語モードon/offします。</li>
+	  <li>Android StudioまたはGradleでビルドします</li>
+	  <li>「物理キーボードがある場合でもソフトキーボードを表示する」という設定にして下さい。</li>
 	</ul>
       </p>
 
-      <h3><a class="anchor" aria-hidden="true"></a>インストール</h3>
+      <h3>TODO</h3>
+
       <p>
+	<ul>
+	  <li>確定後に助詞を候補として表示</li>
+	  <li>候補ウィンドウをカーソルのそばに表示</li>
+	  <li>候補単語をタッチで選択できるように</li>
+	  <li>外付けキーボードで動くように</li>
+	</ul>
       </p>
+
+      <!--
+      <h3>インストール</h3>
+      <p>
+	
+      </p>
+      -->
 	
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/masui/GyaimMotion">Gyaim</a> is maintained by <a href="https://github.com/masui">masui</a>.</span>
