--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Gyaim for Android</h1>
       <h2 class="project-tagline">Androidの日本語入力システム by Toshiyuki Masui</h2>
-      <a href="https://github.com/masui/GyaimAndroid/raw/master/Gyaim.apk" class="btn">Gyaim.apk ダウンロード</a>
+      <a href="https://github.com/masui/GyaimAndroid/blob/master/Gyaim.apk?raw=true" class="btn">Gyaim.apk ダウンロード</a>
       <a href="https://github.com/masui/GyaimAndroid" class="btn">ソース @ GitHub</a>
     </section>
 
