--- a/index.html
+++ b/index.html
@@ -45,12 +45,16 @@
 	</ul>
       </p>
 
-      <!--
-      <h3>インストール</h3>
+      <h3>謎</h3>
       <p>
-	
+	<ul>
+	  <li>テストでJSONを扱うとき、何故かbuild.gradleに以下の記述が必要</li>
+	  <code>testCompile 'org.json:json:20140107'</code>
+	  <br>
+	  出典: <a href="https://stackoverflow.com/questions/29402155/android-unit-test-not-mocked">https://stackoverflow.com/questions/29402155/android-unit-test-not-mocked</a>
+	</ul>
       </p>
-      -->
+
 	
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/masui/GyaimMotion">Gyaim</a> is maintained by <a href="https://github.com/masui">masui</a>.</span>
