--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
 	</ul>
       </p>
 
+      <h3>インストール</h3>
+
+      <p>
+	<ul>
+	  <li>Gyaim.apkをインストール</li>
+	</ul>
+      </p>
+
+      <h3>開発</h3>
+
+      <p>
+	<ul>
+	  <li><code>% git clone git@github.com:masui/GyaimAndroid.git</code></li>
+	  <li>Android Studioを使う
+	    <br>または <code>% gradlew builrd</code>
+	    <br>または <code>% make</code>
+	  </li>
+	</ul>
+      </p>
+
       <h3>TODO</h3>
 
       <p>
