--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
 
       <p>
 	<ul>
+	  <li>曖昧検索 (e.g. tkkg => 東京工業大学)</li>
 	  <li>確定後に助詞を候補として表示</li>
 	  <li>候補ウィンドウをカーソルのそばに表示</li>
-	  <li>候補単語をタッチで選択できるように</li>
 	  <li>外付けキーボードで動くように</li>
+	  <li>候補単語をタッチで選択できるように</li>
 	</ul>
       </p>
 
@@ -83,7 +84,6 @@
       </footer>
 
     </section>
-
   
   </body>
 </html>
